--- a/i3wm/config
+++ b/i3wm/config
@@ -10,37 +10,78 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+# Автозапуск программ
+exec --no-startup-id setxkbmap "us,ru" ",winkeys" "grp:alt_shift_toggle,grp_led:scroll"
+exec --no-startup-id feh --bg-scale /home/vladimir/pictures/backround.jpg
+exec --no-startup-id exec compton -b
+exec --no-startup-id xrandr --dpi 100
+exec --no-startup-id flameshot
+exec --no-startup-id dropbox start
+exec --no-startup-id xrdb /home/vladimir/.Xresources
+#Управление громкостью
+# выключение звука по умолчанию
+#exec amixer -q set Master toggle
+# Управление громкостью
+#bindsym XF86AudioRaiseVolume exec amixer -q set Master 10dB+ unmute
+#bindsym XF86AudioLowerVolume exec amixer -q set Master 10dB- unmute
+#bindsym XF86AudioMute exec amixer -q set Master toggle
+
+
+# Отступы между открытыми окнами
+gaps inner 0
+
+# Включает умные рамки, когда открыто одно окно рамки выключаются
+smart_borders on
+
+# Увеличение толщены рамки, чтобы было лучше видно активное окно
+for_window [tiling] border pixel 1
+
+# Убить окно нажав средней кнопкой мыши на титульный заголовок окна
+bindsym --release button2 kill
+
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 12
+font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 10
+#font pango:DejaVu Sans Mono 8
 
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
+# The combination of xss-lock, nm-applet and pactl is a popular choice, so
+# they are included here as an example. Modify as you see fit.
+
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+# screen before suspend. Use loginctl lock-session to lock your screen.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+
+# NetworkManager is the most popular way to manage wireless networks on Linux,
+# and nm-applet is a desktop environment-independent system tray GUI for it.
+exec --no-startup-id nm-applet
+
+# Use pactl to adjust volume in PulseAudio.
+set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-# bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec urxvtc
+bindsym $mod+Return exec i3-sensible-terminal
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id dmenu_run
+# A more modern dmenu replacement is rofi:
+# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+# There also is i3-dmenu-desktop which only displays applications shipping a
+# .desktop file. It is a wrapper around dmenu, so you need that installed.
+# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+j focus left
@@ -94,9 +135,9 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1-Base"
-set $ws2 "2-Web"
-set $ws3 "3-Videos"
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
@@ -106,28 +147,28 @@ set $ws9 "9"
 set $ws10 "10"
 
 # switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
+bindsym $mod+1 workspace number $ws1
+bindsym $mod+2 workspace number $ws2
+bindsym $mod+3 workspace number $ws3
+bindsym $mod+4 workspace number $ws4
+bindsym $mod+5 workspace number $ws5
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
+bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+1 move container to workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -162,22 +203,14 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+# Темы для Rofi
+bindsym $mod+shift+d exec --no-startup-id "rofi -show run -display-run '>>> ' -width 400 -theme /home/vladimir/.config/rofi/solarized_alternate"
+bindsym $mod+shift+s exec --no-startup-id "rofi -show ssh '>>> ' -width 400 -theme /home/vladimir/.config/rofi/solarized_alternate"
+bindsym $mod+shift+f exec --no-startup-id "rofi -width 400 -show window -display-window '$$$ ' -theme /home/vladimir/.config/rofi/solarized_alternate"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         status_command i3status
-
 }
-# Раскладка
-exec setxkbmap "us,ru" ",winkeys" "grp:alt_shift_toggle"
-# Фон
-exec feh --bg-scale /home/vladimir/Изображения/sochi_park_1.jpg.1
-# Назначение окон для программ
-assign [class="Pcmanfm"] $ws5
-assign [class="Chromium"] $ws2
-assign [class="vlc"] $ws3
-# Темы для Rofi
-bindsym $mod+shift+d exec --no-startup-id "rofi -show run -display-run '>>> ' -width 400 -theme /home/vladimir/.config/rofi/solarized_alternate"
-bindsym $mod+shift+f exec --no-startup-id "rofi -width 400 -show window -display-window '$$$ ' -theme /home/vladimir/.config/rofi/solarized_alternate"
-# exec --no-startup-id i3-msg 'workspace 3:Videos; exec chromium'
+
