--- a/i3wm/i3status.conf
+++ b/i3wm/i3status.conf
@@ -8,16 +8,17 @@
 
 general {
         colors = true
-        interval = 1
+        interval = 2
 }
-# Громкость
-order += "volume master"
-order += "ipv6"
-order += "disk /"
+
+#order += "ipv6"
 order += "wireless _first_"
-order += "ethernet _first_"
+#order += "ethernet _first_"
+order += "volume master"
 order += "battery all"
-order += "load"
+order += "disk /"
+#order += "load"
+order += "memory"
 order += "tztime local"
 
 wireless _first_ {
@@ -26,7 +27,6 @@ wireless _first_ {
 }
 
 ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
 }
@@ -35,21 +35,27 @@ battery all {
         format = "%status %percentage %remaining"
 }
 
-tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+disk "/" {
+        format = "%avail"
 }
 
 load {
         format = "%1min"
 }
 
-disk "/" {
-        format = "%avail"
+memory {
+        format = "%used | %available"
+        threshold_degraded = "1G"
+        format_degraded = "MEMORY < %available"
 }
-# Громкость
+
+tztime local {
+        format = "%Y-%m-%d %H:%M:%S"
+}
 volume master {
-format = "V: %volume"
-device = "default"
-mixer = "Master"
-# mixer_idx = 0
+    format = " %volume" # шаблон громкости в активном состоянии
+    format_muted = " %volume" # шаблон громкости в состоянии muted (без звука)
+    device = "default"
+    mixer = "Master"
+    mixer_idx = 0
 }
