--- a/i3wm/config
+++ b/i3wm/config
@@ -210,6 +210,7 @@ bindsym $mod+shift+f exec --no-startup-id "rofi -width 400 -show window -display
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+# Proverka
 bar {
         status_command i3status
 }
