--- a/i3wm/config
+++ b/i3wm/config
@@ -11,7 +11,7 @@
 
 set $mod Mod4
 # Автозапуск программ
-exec --no-startup-id setxkbmap "us,ru" ",winkeys" "grp:alt_shift_toggle,grp_led:scroll"
+#exec --no-startup-id setxkbmap "us,ru" ",winkeys" "grp:alt_shift_toggle,grp_led:scroll"
 exec --no-startup-id feh --bg-scale /home/vladimir/pictures/backround.jpg
 exec --no-startup-id exec compton -b
 exec --no-startup-id xrandr --dpi 100
