--- a/i3wm/config
+++ b/i3wm/config
@@ -18,6 +18,7 @@ exec --no-startup-id xrandr --dpi 100
 exec --no-startup-id flameshot
 #exec --no-startup-id dropbox start
 exec --no-startup-id xrdb /home/vladimir/.Xresources
+exec --no-startup-id conky --config=/home/vladimir/.conky/Makarov_Conky/Minimalistik_Panel 
 #Управление громкостью
 # выключение звука по умолчанию
 #exec amixer -q set Master toggle
