--- a/i3wm/config
+++ b/i3wm/config
@@ -18,7 +18,7 @@ exec --no-startup-id xrandr --dpi 100
 exec --no-startup-id flameshot
 #exec --no-startup-id dropbox start
 exec --no-startup-id xrdb /home/vladimir/.Xresources
-exec --no-startup-id conky --config=/home/vladimir/.conky/Makarov_Conky/Minimalistik_Panel 
+#exec --no-startup-id conky --config=/home/vladimir/.conky/Makarov_Conky/Minimalistik_Panel 
 #Управление громкостью
 # выключение звука по умолчанию
 #exec amixer -q set Master toggle
@@ -71,7 +71,8 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
